2006-12-27  Alexander V. Lukyanov <lav@yars.free.net>

	* Cache.h: (Cache::AddCacheEntry) new method.
	* Resolver.cc, Resolver.h, LsCache.cc, LsCache.h: use it.
	* ResMgr.cc, ResMgr.h: (ResClient) new base class for resource users.
	* FileAccess.cc, FileAccess.h, Resolver.h, Resolver.cc,
	  Speedometer.cc, Speedometer.h: use it.
	* misc.h: add list macros.

2006-12-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Timer.cc, Timer.h: reset timer when creating it from TimeInterval,
	  this fixes sleep command; (re_set) forced resetting; use it.

2006-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: remove obsolete note about infinite cache size.

2006-12-10  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: eliminate sched_total and the need to merge
	  multiple block vectors; tasks set the global SMTask::block directly.
	* Job.cc: (WaitDone) make it more robust - protect from deleting the
	  jobs we wait for.

2006-12-06  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: reset timeout_timer when waiting for transfer
	  confirmation; reset it when sending a command after some idle
	  time; (Read) fixed check for null iobuf.
	* Timer.cc: (Reset) reset only to a later time.

2006-11-28  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: (--on-change) new option.
	* log.cc, log.h: optimize Log::Format for when the message is not
	  going to be output.
	* buffer.cc, buffer.h, ftpclass.cc, ftpclass.h: (DataTranslator) new
	class; use it in DirectedBuffer; (DataRecoder) new class for charset
	conversion; use DataTranslator in IOBufferTelnet; skip 3-byte telnet
	commands; optimize buffer data movement.

2006-10-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: clear and reset cp when a sub-job finishes (fixes
	  coredump in mget).

2006-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use Delete on SMTask derivative Speedometer.