@@ -1,3 +1,10 @@
+2007-01-06  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* misc.cc, misc.h, Fish.cc, Fish.h: move shell_encode to misc.cc.
+	* MirrorJob.cc: use shell_encode to quote properly file names for shell;
+	  this fixes potential security vulnerability when one generates a
+	  script with mirror --script and then executes it.
+
 2006-12-27  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Cache.h: (Cache::AddCacheEntry) new method.
